<resources>
    <string name="app_name">AppForSeniors</string>

    <!--TOOLBAR-->
    <string name="back">Wróć</string>
    <string name="save">Zapisz</string>
    <string name="newS">Nowa</string>
    <string name="write">Napisz</string>
    <string name="send">Wyślij</string>

    <string name="newL">Nowy</string>

    <!--Menu-->
    <string name="menu">Menu</string>
    <string name="wybierz">Wybierz</string>
    <string name="alarm">Budzik</string>
    <string name="sms">Wiadomości</string>
    <string name="call">Zadzwoń</string>
    <string name="gps">Nawigacja</string>
    <string name="notes">Notatki</string>
    <string name="web">Internet</string>
    <string name="usun">Usuń</string>


    <!--Contacts-->
    <string name="write_number">Wpisz numer</string>
    <string name="choose_from_contact">Kontakty</string>
    <string name="new_number">Nowy kontakt</string>
    <string name="add_contact">Dodaj nowy numer do listy</string>
    <string name="edit">Edytuj</string>
    <string name="delete_contact">Usuń</string>
    <string name="call_to_contact_number">Zadzwoń</string>
    <string name="contact_lista">"Lista numerów</string>
    <string name="edit_contact">Edycja kontaktu</string>

    <!--Sms-->
    <string name="show">Pokaż</string>
    <string name="delete">Usuń</string>
    <string name="me">Ja</string>
    <string name="newReceiver">Dodaj odbiorcę</string>

    <!--Linki-->
    <string name="nazwaLinku">Nazwa Linku</string>
    <string name="urlL">Adres url</string>

    <!--Popup-->
    <string name="popup_title_yes_no">Uważaj</string>
    <string name="popup_title_information">Informacja</string>
    <string name="sms_persmission">Do poprawnego działania, aplikacja potrzebuje Twojego pozwolenia na czytanie i wysyłanie wiadomości.\nNadaj dostęp klikając "Tak" w następnym oknie..</string>

    <!-- Navigation -->
    <string name="new_address">"Nowy adres</string>
    <string name="edit_address">"Edycja adresu</string>
    <string name="navigation_list">"Nawigacja</string>

    <!--Voice-notes-->
    <string name="start_recording">Rozpocznij nowe nagranie</string>
    <string name="stop_recording">Zakończ nagranie</string>
    <string name="stop_play">Zatrzymaj nagranie</string>
    <string name="play">Odtwórz</string>
    <string name="stop_play_2">Stop</string>
    <string name="add_note">"Nowa notatka</string>
    <string name="edit_note">"Edycja notatki</string>
    <string name="notes_title">"Notatki</string>

    <!-- Alarm -->
    <string name="title_activity_rwalarm_list">RWAlarmListActivity</string>
    <string name="title_activity_edit_link">EditLinkActivity</string>

</resources>
