<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/voice_notes_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoiceNotes.VoiceNotesList">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/voice_notes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/voice_notes_buttons_layout"
            android:horizontalSpacing="5dp"
            android:numColumns="2"
            android:scrollbars="vertical"
            android:verticalSpacing="5dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/voice_notes_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="3">


            <Button
                android:id="@+id/voice_notes_play_stop"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:text="@string/play"
                android:textAllCaps="false"
                android:textSize="26dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_edit_notes"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textSize="26dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/voice_notes_button_delete"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textSize="26dp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>