<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacts.ContactListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/contact_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/contact_buttons_layout"
            android:horizontalSpacing="5dp"
            android:numColumns="2"
            android:scrollbars="vertical"
            android:verticalSpacing="5dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/contact_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/contact_button_call"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/call_to_contact_number"
                android:textAllCaps="false"
                android:textSize="26dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/contact_button_edit"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textSize="26dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/contact_button_delete"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/delete_contact"
                android:textAllCaps="false"
                android:textSize="26dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/contact_button_select"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="3"
                android:text="Wybierz"
                android:textAllCaps="false"
                android:textSize="26dp"
                android:textStyle="bold"
                android:visibility="gone"/>
        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>