<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacts.ContactTypeActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="4dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFF8D"
            android:text="@string/add_contact"
            android:textSize="25dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/go_to_new_number_activity"
            />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="4dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:text="@string/choose_from_contact"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/go_to_contact"
            />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="4dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"

            android:layout_gravity="center"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="5dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/write_number"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:id="@+id/call_at_number"
            android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>